<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:alignItems="stretch"
        app:alignContent="stretch"
        app:flexDirection="column"
        tools:context=".ui.PasteFragment">

        <com.google.android.flexbox.FlexboxLayout
            app:layout_flexBasisPercent="15%"
            android:layout_height="120dp"
            android:layout_width="80dp" />

        <com.google.android.flexbox.FlexboxLayout
            app:layout_flexBasisPercent="35%"
            android:layout_height="0dp"
            android:layout_width="80dp"
            app:alignItems="center"
            app:justifyContent="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/finish_button"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:fontFamily="@font/noto_sans"
                android:text="@string/finished"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="@string/finished" />
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            app:layout_flexBasisPercent="40%"
            android:layout_height="0dp"
            android:layout_width="80dp"
            app:flexDirection="column">

            <com.google.android.flexbox.FlexboxLayout
                app:layout_flexBasisPercent="50%"
                android:layout_height="0dp"
                android:layout_width="match_parent">

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_flexBasisPercent="10%" />

                <com.google.android.flexbox.FlexboxLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_flexBasisPercent="80%"
                    app:flexDirection="column">

                    <com.google.android.flexbox.FlexboxLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:layout_flexBasisPercent="30%">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/noto_sans"
                            android:gravity="bottom"
                            android:text="@string/patience"
                            android:textAlignment="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            app:layout_flexBasisPercent="110%"
                            tools:text="@string/patience" />
                    </com.google.android.flexbox.FlexboxLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:text="@string/paste_info"
                        android:textAlignment="center"
                        android:textSize="16sp"
                        app:layout_flexBasisPercent="60%" />
                </com.google.android.flexbox.FlexboxLayout>

                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_flexBasisPercent="10%" />
            </com.google.android.flexbox.FlexboxLayout>

            <com.google.android.flexbox.FlexboxLayout
                app:layout_flexBasisPercent="60%"
                android:layout_height="0dp"
                android:layout_width="match_parent" />
        </com.google.android.flexbox.FlexboxLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/caption"
            android:textAlignment="center"
            app:layout_flexBasisPercent="10%"
            tools:text="@string/caption" />

    </com.google.android.flexbox.FlexboxLayout>
</layout>